<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bd"
    tools:context=".activites.LoginActivity"
    >

    <ImageView
         android:id="@+id/img_header_logo"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo" />

    <TextView
         android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header_logo"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp" />


    <RelativeLayout
        android:id="@+id/rllt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/prgs_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prgs_loading"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/login_loading"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rllt_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/rllt_loading">




        <LinearLayout
            android:id="@+id/lnlt_inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_white_24dp"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_email_white_24dp"
                android:hint="@string/user_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteOverlay"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteOverlay"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_signup"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_above="@+id/tv_dont_have_account"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_login_bg"
            android:paddingEnd="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingRight="@dimen/_40sdp"
            android:paddingStart="@dimen/_40sdp"
            android:text="@string/login_btn"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>
</RelativeLayout>