<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bd"
    tools:context="com.example.abedeid.myapplication.Fragments.CheckPasswordDialog">

    <RelativeLayout
        android:id="@+id/rllt_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/prgs_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prgs_loading"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_loading"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rllt_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/rllt_loading">

        <Button
            android:id="@+id/btn_update_check"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_above="@+id/tv_already_have_account"
            android:layout_below="@+id/et_password_update"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_login_bg"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp"
            android:text="@string/check"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/et_password_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhiteOverlay"
            android:textSize="16sp" />
    </RelativeLayout>
</FrameLayout>
