<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bd"
    tools:context="com.example.abedeid.myapplication.activites.Update_data">

            <ImageView
                android:id="@+id/img_header_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_h_logo" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_header_logo"
        android:gravity="center"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />


            <RelativeLayout
                android:id="@+id/rllt_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/prgs_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/prgs_loading"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/wait"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rllt_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_below="@+id/rllt_loading"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/lnlt_inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username_udate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteOverlay"
                android:textSize="16sp" />




            <EditText
                android:id="@+id/et_password_udate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteOverlay"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_repeat_password_udate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteOverlay"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Spinner
                    android:id="@+id/yaer_udate"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_spinner_background"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/depart_udate"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_spinner_background"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/section_udate"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_spinner_background"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_udate"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/btn_login_bg"
            android:paddingEnd="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingStart="40dp"
            android:text="@string/update"
            android:textColor="@color/colorPrimaryDark"
            android:layout_above="@+id/tv_already_have_account"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>
